--- a/projects/dogen.cli/CMakeLists.txt
+++ b/projects/dogen.cli/CMakeLists.txt
@@ -19,6 +19,9 @@
 #
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src)
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/tests)
+if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/generated_tests)
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/generated_tests)
+endif()
 
 install(
     DIRECTORY include/
