--- a/projects/dogen.tracing/CMakeLists.txt
+++ b/projects/dogen.tracing/CMakeLists.txt
@@ -1,4 +1,4 @@
-# -*- mode: cmake; tab-width: 4; indent-tabs-mode: nil -*-
+# -*- mode: cmake; cmake-tab-width: 4; indent-tabs-mode: nil -*-
 #
 # Copyright (C) 2012-2015 Marco Craveiro <marco.craveiro@gmail.com>
 #
@@ -18,6 +18,9 @@
 # MA 02110-1301, USA.
 #
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src)
+if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/generated_tests)
+    add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/generated_tests)
+endif()
 
 install(
     DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/
