--- a/projects/dogen.assets/src/CMakeLists.txt
+++ b/projects/dogen.assets/src/CMakeLists.txt
@@ -34,6 +34,8 @@ set_target_properties(${lib_target_name}
     PROPERTIES VERSION ${DOGEN_VERSION} SOVERSION ${DOGEN_VERSION_MAJOR})
 
 target_link_libraries(${lib_target_name}
+    dogen.archetypes.lib
+    dogen.extraction.lib
     dogen.lib
     dogen.utility.lib
     dogen.tracing.lib
