--- a/projects/dogen.generation.cpp/src/CMakeLists.txt
+++ b/projects/dogen.generation.cpp/src/CMakeLists.txt
@@ -34,6 +34,9 @@ set_target_properties(${lib_target_name}
     PROPERTIES VERSION ${DOGEN_VERSION} SOVERSION ${DOGEN_VERSION_MAJOR})
 
 target_link_libraries(${lib_target_name}
+    dogen.tracing.lib
+    dogen.generation.lib
+    dogen.archetypes.lib
     dogen.variability.lib
     dogen.extraction.lib
     dogen.assets.lib
