--- a/projects/dogen.variability/src/CMakeLists.txt
+++ b/projects/dogen.variability/src/CMakeLists.txt
@@ -43,7 +43,7 @@ target_link_libraries(${lib_target_name}
     dogen.tracing.lib
     dogen.archetypes.lib
     dogen.utility.lib
-    ${relational_lib}
+    # ${relational_lib}
     ${Boost_LIBRARIES})
 
 install(TARGETS ${lib_target_name}
